# ED2

./: .gitignore  CMakeLists.txt
AVLestudos/: AVLtree.c  AVLtree.h  main.c
Arvorerubronegro/: Rubrotree.c  Rubrotree.h  main.c
Aula - 09_04/: BinTree.c  BinTree.h
Aula - 26;03/: BinTree.c
Aula - 26_03/: BinTree.c  BinTree.h  main.c
Aula - 28;03/: BinTree.c  main.c
Aula - 28_03/: BinTree.c  BinTree.h
Codigo_do_Professor/: BinTree.c  BinTree.h  input2.txt  main.c
Exercicio 1/: main.c
Exercicio_1/: BinTree.c  BinTree.h  main.c
zero/: Bintree.c  Bintree.h  main.c
